; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/drm2/ttm/extr_ttm_lock.c_ttm_lock_send_sig.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/drm2/ttm/extr_ttm_lock.c_ttm_lock_send_sig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }

@curproc = common dso_local global %struct.proc* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @ttm_lock_send_sig to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ttm_lock_send_sig(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.proc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.proc*, %struct.proc** @curproc, align 8
  store %struct.proc* %4, %struct.proc** %3, align 8
  %5 = load %struct.proc*, %struct.proc** %3, align 8
  %6 = call i32 @PROC_LOCK(%struct.proc* %5)
  %7 = load %struct.proc*, %struct.proc** %3, align 8
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @kern_psignal(%struct.proc* %7, i32 %8)
  %10 = load %struct.proc*, %struct.proc** %3, align 8
  %11 = call i32 @PROC_UNLOCK(%struct.proc* %10)
  ret void
}

declare dso_local i32 @PROC_LOCK(%struct.proc*) #1

declare dso_local i32 @kern_psignal(%struct.proc*, i32) #1

declare dso_local i32 @PROC_UNLOCK(%struct.proc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
